# axumserv

./: Cargo.toml  Procfile  README.md  index2.html  index3.html  index4.html  index5.html  index6.html  index6n.html  index7.html  index8.html  index9.html  index9n.html  index9r.html  indexmain.html  q.toml
pkg/: cqw.d.ts  cqw.js  cqw_bg.wasm  cqw_bg.wasm.d.ts  package.json
src/: main.rs  mainGoogleFilter.rs  mainS3.rs  mainS3.rss
